--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@chakra-ui/react": "^3.1.1",
     "@emotion/react": "^11.13.3",
     "@reown/appkit": "^1.3.2",
     "@reown/appkit-adapter-wagmi": "^1.3.2",
     "@tanstack/react-query": "^5.59.20",
+    "graphql": "^16.9.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
